Fix contrast for custom background color

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -27,14 +27,17 @@ a {
 
 .bg-dark-brown {
 	background-color: #753523 !important;
+	color: #fff !important;
 }
 
 .bg-brown {
 	background-color: #b05c3c !important;
+	color: #fff !important;
 }
 
 .bg-mocca {
 	background-color: #d79771 !important;
+	color: #fff !important;
 }
 
 .bg-beige {
